<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.AppBarLayout">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:title="Edit Vehicle Information"
            app:titleCentered="true">


        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_vehicle_subtext"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_model"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/model"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_type"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_plateNo"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plate_no"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_seats"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/seats"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:paddingHorizontal="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/babies_allowed"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_babies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:paddingHorizontal="4dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/pets_allowed"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_pets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
            android:text="@string/save_changes" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>