<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.profile.DriverProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driver_information"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driver_information_subtext"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:layout_marginBottom="20dp" />

        <com.example.gotaximobile.fragments.profile.ProfileCardView
            android:id="@+id/card_active_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_information"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_information_subtext"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.gotaximobile.fragments.profile.ProfileCardView
                android:id="@+id/card_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.example.gotaximobile.fragments.profile.ProfileCardView
                android:id="@+id/card_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.example.gotaximobile.fragments.profile.ProfileCardView
                android:id="@+id/card_plate_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.example.gotaximobile.fragments.profile.ProfileCardView
                android:id="@+id/card_seats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.example.gotaximobile.fragments.profile.ProfileCardView
                android:id="@+id/card_babies_allowed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.example.gotaximobile.fragments.profile.ProfileCardView
                android:id="@+id/card_pets_allowed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>